--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -12,7 +12,12 @@
         <%= @user.name.first.upcase %>
       </div>
       <div>
-        <h2 class="text-2xl font-bold"><%= @user.name %></h2>
+        <h2 class="text-2xl font-bold">
+          <%= @user.name %>
+          <% if @user.is_staff? %>
+            <span class="text-lg text-sky-600 dark:text-sky-400 font-normal">(Staff)</span>
+          <% end %>
+        </h2>
         <p class="text-gray-600 dark:text-gray-400"><%= @user.email_address %></p>
         <% if @user.phone.present? %>
           <p class="text-gray-600 dark:text-gray-400"><%= @user.phone %></p>
